test/library/packages/Python/correctness/arrays/arrayErrors.11.good
arrayErrors.chpl:5: In function 'main':
arrayErrors.chpl:148: error: Rank must be specified at compile time
